Edge Length with Separate Units Displayed As 1m 100cm #45459

Closed
opened 2015-07-16 15:33:37 +02:00 by Avenger · 4 comments

System Information
Windows 7 GTX 760

Blender Version
Broken: 2.75 c6b042b

Short description of error
Edge length with "Separate Units" on can is printed sometimes as 1m 100cm instead of just 2m.
It happens sometimes when you snap vertices, which leads to micro imprecision errors. Separate Units could handle such cases better.

Exact steps for others to reproduce the error
Enable Properties > Scene > Units > "Separate Units" and "Metric"
Enable - [x] > Mesh Display > Edge Info: "Length"
Scale the default cube by 0.99999

**System Information** Windows 7 GTX 760 **Blender Version** Broken: 2.75 c6b042b **Short description of error** Edge length with "Separate Units" on can is printed sometimes as 1m 100cm instead of just 2m. It happens sometimes when you snap vertices, which leads to micro imprecision errors. Separate Units could handle such cases better. **Exact steps for others to reproduce the error** Enable Properties > Scene > Units > "Separate Units" and "Metric" Enable - [x] > Mesh Display > Edge Info: "Length" Scale the default cube by 0.99999
Author

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Avenger 2015-07-16 15:33:37 +02:00
Author

Added subscriber: @OskarSwierad

Added subscriber: @OskarSwierad

This issue was referenced by 2fe9224375

This issue was referenced by 2fe922437536a3418c79ffe2c26c964b98f2b366

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45459
No description provided.